--- a/intro.tex
+++ b/intro.tex
@@ -27,8 +27,8 @@
 另外，一些通用的作物生长模型也被用于模拟棉花生长，如 EPIC\cite{williams1989}，WOFOST\cite{vanDiepen1989WOFOST}，SUCROS\cite{vanittersum2003}，GRAMI\cite{ko2005}，CropSyst\cite{sommer2008}和 AquaCrop\cite{steduto2009}。
 本节将对它们进行回顾。%
 模型的应用领域包括作物用水和灌溉水管理、氮素动力学和肥料管理、遗传学和作物改良、气候学、全球气候变化、精准农业、模型与传感器数据整合、经济学和课堂教学。%
-一般来说，文献显示在上个世纪越来越重视棉花模型的开发，在本世纪越来越重视棉花模型的应用。%
-尽管开发棉花模型的努力已经有 50 年的历史，但没有报道棉花模型之间的比较。作为评估当前棉花模拟策略的第一步，这种努力是可取的。%
+总的来说，在上个世纪重视棉花模型的开发，本世纪以来则越来越重视棉花模型的应用\cite{thorp2014}。%
+尽管的最早棉花模型已经有 50 年的历史，但棉花模型之间的对比较少\cite{thorp2014}。%
 越来越多的棉花模拟模型被非传统的作物建模者应用，他们不是训练有素的农学家，但希望使用模型进行广泛的经济或生命周期分析。%
 尽管这一趋势表明人们对模型的兴趣越来越大，而且模型在各种应用中都有潜在的效用，但这就需要为特定的应用开发具有适当复杂性和易用性的模型，而且需要改进文件和教材来教育潜在的模型用户。%
 空间尺度问题也越来越突出，因为最初为田间使用而开发的模型正被用于大面积的区域模拟。%
