REFACTOR: include instead of input

--- a/method.tex
+++ b/method.tex
@@ -52,7 +52,7 @@ $N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
 \begin{figure}
     \centering
     \includegraphics[scale=0.5]{climate.png}
-    \caption{2019-2021年试验站棉花生长期主要气象数据}
+    \caption{2019{-}2021年试验站棉花生长期主要气象数据}
 \end{figure}
 
 冠层温湿度由精创 RC-4HA 收集，设置取样间隔为 0.5 小时。
