--- a/model.tex
+++ b/model.tex
@@ -5,7 +5,7 @@
 原版的 Cotton2K 模型输入输出是基于特定格式的文件的。考虑到模型的建立处于关系型数据库还未流行的年代，这种基于特定格式文件的输入输出方式是可以理解的。
 但这样的输入输出方式不利于 Cotton2K 结合到以 Python 为核心的现代化机器学习的生态中。
 所以本文对 Cotton2K 进行了重构，修改输出输出为结构化数据，方便与其他机器学习工具结合。
-%具体的输入格式以 JSON Schema 的格式定义，参见附录\ref{appendix:inputSchema}，在此不再赘述。
+具体的输入格式以 JSON Schema 的格式定义。
 
 输出格式修改为 CSV 格式，改变模型代码以直接输出与土钻取土位置相对应的土壤含水量，全部字段见表 \ref{tab:output}。
 
@@ -43,9 +43,15 @@
 一些参数集在运行时引起了下溢或溢出错误，这就需要对编码进行编辑，以限制某些状态变量的范围。
 例如，在 Cotton2K 中新叶生长的过程中，新叶的质量是固定的，且是由茎的质量转移而来，在极端的情况下，叶片生长速度过快会导致茎干重变为负数。
 
+\section{优化运行效率}
+引入 Intel MKL 数值函数库，重构模型中的数据结构，整理模型运行的流程，缓存中间计算结果，避免一些非必要的重复计算，%
+尤其是优化耗时最多的土壤热传导模块的计算，大幅提高运行效率。
+相比原版模型，单核 CPU 单次运行耗时由 10 秒左右降低至 3 秒左右，大幅提高了后续分析模拟的效率。
+
 \section{跨操作系统编译}
 \authoryearcite{thorp2019} 使用了 PALMScot 景观尺度棉花建模工具开发者维护的 Fortran 版本的 Cotton2K，主要是因为新版的 Cotton2K 高度依赖%
 Microsoft Windows 平台的 GUI 框架 MFC。本文作者通过将 Cotton2K 完全使用 Python 重构，成功解决了上述与 Microsoft Windows 平台绑定的问题。
+改版后的模型可以在互联网自由获取，方便其他学者后续研究。
 
 \section{全新的冠层子模块}\label{sec:canopyLayering}
 Cotton2K 模型中的光能截获率计算是从 GOSSYM 模型中演进而来。
@@ -113,4 +119,4 @@ $P_{tnfac}$ 低叶片含氮量下的校正因子，%
 $P_{agei}$ 叶龄校正因子。
 
 \section{本章小结}
-本章首先对获取的 Cotton2K 模型源码进行了修改，改进了模型的输入与输出格式，修正了部分计算问题，移除了与 Windows 平台的绑定，最终增加了一个更为详细的分层模拟的冠层子模块。
+本章首先对获取的 Cotton2K 模型源码进行了修改，改进了模型的输入与输出格式，修正了部分计算问题，优化了模型的运行效率，移除了与 Windows 平台的绑定，最终增加了一个更为详细的分层模拟的冠层子模块。
