PRE: submit to jiance888.com

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{结论与展望}
 本文对机理性很强的棉花生产模拟模型 Cotton2K 进行了详细阐述，%
 修改了 Cotton2K 模型的源码以修复一些问题并增加新的功能，%
-并以新疆阿拉尔市 2019年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol' 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
+并以新疆阿拉尔市 2019年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
 并对敏感性指数较大的品种参数采用 NSGA-III 多目标优化算法进行优化，%
 对模拟结果与实测数据进行分析，进而评估了模型的修改对研究区域棉花的模拟精度的影响。%
 总的来说，在该模型对棉花生育早期特别是现蕾以前模拟的精度很高，随着器官的分化，棉花的生长发育机理变得越来越复杂，模拟的精度有所下降。%
