--- a/sa.tex
+++ b/sa.tex
@@ -1,154 +1,156 @@
 \chapter{模型敏感性分析}\label{chap:sa}
-为了深入了解Cotton2K对模型输入参数调整的反应，使用Python中SALib包的算法进行了Sobol 全局敏感性分析 (Sobol GSA)。%
-在实践中，通常先进行计算密集度较低的敏感性分析，然后再进行像 Sobol GSA 这样的密集型方法。%
-在这里，只使用了Sobol GSA，因为编写的高性能并行计算脚本和对模型的性能优化的可用性确保了模拟的效率。
+\begin{spacing}{\fpeval{25 / (12 * 1.2)}}
+    为了深入了解Cotton2K对模型输入参数调整的反应，使用Python中SALib包的算法进行了Sobol 全局敏感性分析 (Sobol GSA)。%
+    在实践中，通常先进行计算密集度较低的敏感性分析，然后再进行像 Sobol GSA 这样的密集型方法。%
+    在这里，只使用了Sobol GSA，因为编写的高性能并行计算脚本和对模型的性能优化的可用性确保了模拟的效率。
 
-使用SALib软件包的算法，对 70 个输入参数和 12 个农业生态系统指标的每个组合计算了一阶、二阶和总的敏感性指数。%
-每个农业生态系统指标的 RMSE 统计量被用作敏感性指数计算的目标函数。%
-任何对 12 个农业生态系统指标中的任何一个具有一阶敏感性指数大于 0.05 的参数都被认为是有影响的参数，%
-并在随后的分析中保持灵活性 (表 \ref{tab:parameters})。%
-其他参数被认为是非影响性的，在剩余的分析中被固定为默认值。%
-Sobol GSA的总体目的是在使用多目标优化进行模型校准之前消除非影响性参数。
-\section{参数选择及取值范围}
-在原版 Cotton2K 模型中，所有参数都是以可更改的外部文件形式导入模型。%
-对于 Cotton2K 模型中 50 个品种参数而言，并非所有的参数对于模型输出结果都具有影响，需要通过敏感性分析选取其中敏感性较大的参数进行下一步校正。%
-本文根据公开的源码和相关参数对应公式，对品种参数取值范围进行了合理化的约束。%
-在修改后的 Cotton2K 模型中品种参数文件以 \texttt{cultivar\_parameters} 字段保存，模型参数服从均匀分布。%
-本文主要对 50 个原始品种参数和 20 个修改模型参数进行敏感性分析，原始模型参数的名称及取值范围如表 \ref{tab:saParameters} 所示。%
-根据第 \ref{chap:modelModification} 章的内容，本文还对模型进行了修改，增加了更为详细的分层的冠层子模块，因为这个改动，改版的 Cotton2K 模型比原版的模型多了 20 个参数，%
-为 LIPAR01 至 LIPAR20，取值范围根据 GOSSYM 模型和 WOFOST 模型中相关的参数范围扩大 100\% 而得。
-\begin{table}
-    \caption{原版 Cotton2K 参数列表及取值范围}\label{tab:saParameters}
-    \small
-    \begin{tabular}{llrr|llrr}
-        \toprule
-        参数     & 功能描述             & 下限  & 上限  & 参数     & 功能描述                   & 下限   & 上限   \\
-        \midrule
-        VARPAR01 & 种植密度对生长的影响 & 0.00  & 0.08  & VARPAR26 & 株高生长                   & 0.70   & 1.30   \\
-        VARPAR02 & 现蕾前的叶生长       & 0.00  & 0.60  & VARPAR27 & 碳胁迫下的主茎节点延迟     & 0.50   & 1.00   \\
-        VARPAR03 & 现蕾前的叶生长       & 0.00  & 0.10  & VARPAR28 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   \\
-        VARPAR04 & 现蕾前的叶生长       & 0.00  & 1.00  & VARPAR29 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   \\
-        VARPAR05 & 主茎叶生长           & 0.50  & 3.00  & VARPAR30 & 温度对方铃形成的影响       & 0.70   & 1.30   \\
-        VARPAR06 & 主茎叶生长           & 0.00  & 0.02  & VARPAR31 & 现蕾前节点的发育           & 1.00   & 5.00   \\
-        VARPAR07 & 主茎叶生长           & 18.0  & 28.0  & VARPAR32 & 现蕾前节点的发育           & 1.00   & 3.00   \\
-        VARPAR08 & 果汁页生长           & 0.00  & 0.20  & VARPAR33 & 现蕾前节点的发育           & 0.50   & 1.00   \\
-        VARPAR09 & 铃生长周期           & 18.9  & 38.0  & VARPAR34 & 初始叶面积                 & 0.01   & 0.10   \\
-        VARPAR10 & 铃生长速率           & 0.10  & 0.45  & VARPAR35 & 果枝发育                   & -32.0  & -26.0  \\
-        VARPAR11 & 最大铃干物质         & 3.00  & 15.0  & VARPAR36 & 坐果节点的发育             & -57.0  & -49.0  \\
-        VARPAR12 & 方铃展前茎生长       & 0.00  & 2.00  & VARPAR37 & 坐果节点的发育             & 0.00   & 2.00   \\
-        VARPAR13 & 方铃展前茎生长       & 0.00  & 2.00  & VARPAR38 & 落叶剂对不同叶龄叶片的影响 & 0.00   & 5.00   \\
-        VARPAR14 & 方铃展前茎生长       & 0.00  & 0.08  & VARPAR39 & 温度对吐絮的影响           & -306.0 & -240.0 \\
-        VARPAR15 & 方铃展后茎生长       & 1.00  & 4.00  & VARPAR40 & 温度对吐絮的影响           & 0.70   & 1.30   \\
-        VARPAR16 & 方铃展后茎生长       & 0.50  & 2.00  & VARPAR41 & 温度对衣份率的影响         & 45.0   & 60.0   \\
-        VARPAR17 & 方铃展后茎生长       & 0.00  & 1.00  & VARPAR42 & 温度对衣份率的影响         & 0.30   & 0.90   \\
-        VARPAR18 & 方铃展后茎生长       & 0.00  & 0.20  & VARPAR43 & 碳胁迫下的脱落强度         & 0.30   & 0.70   \\
-        VARPAR19 & 株高生长             & 0.00  & 0.50  & VARPAR44 & 水分胁迫下的脱落强度       & 0.30   & 0.70   \\
-        VARPAR20 & 株高生长             & 0.00  & 0.10  & VARPAR45 & 方铃脱落的概率             & 0.10   & 0.50   \\
-        VARPAR21 & 株高生长             & 10.0  & 18.0  & VARPAR46 & 方铃脱落的概率             & 0.00   & 0.15   \\
-        VARPAR22 & 株高生长             & -4.00 & -2.00 & VARPAR47 & 铃脱落的概率               & 1.00   & 10.0   \\
-        VARPAR23 & 株高生长             & 0.09  & 0.12  & VARPAR48 & 铃脱落的概率               & 0.30   & 1.50   \\
-        VARPAR24 & 株高生长             & 0.00  & 0.50  & VARPAR49 & 铃脱落的概率               & 5.00   & 15.0   \\
-        VARPAR25 & 株高生长             & 1.00  & 4.00  & VARPAR50 & 铃脱落的概率               & 0.20   & 1.80   \\
-        \bottomrule
-    \end{tabular}
-\end{table}
+    使用SALib软件包的算法，对 70 个输入参数和 12 个农业生态系统指标的每个组合计算了一阶、二阶和总的敏感性指数。%
+    每个农业生态系统指标的 RMSE 统计量被用作敏感性指数计算的目标函数。%
+    任何对 12 个农业生态系统指标中的任何一个具有一阶敏感性指数大于 0.05 的参数都被认为是有影响的参数，%
+    并在随后的分析中保持灵活性 (表 \ref{tab:parameters})。%
+    其他参数被认为是非影响性的，在剩余的分析中被固定为默认值。%
+    Sobol GSA的总体目的是在使用多目标优化进行模型校准之前消除非影响性参数。
+    \section{参数选择及取值范围}
+    在原版 Cotton2K 模型中，所有参数都是以可更改的外部文件形式导入模型。%
+    对于 Cotton2K 模型中 50 个品种参数而言，并非所有的参数对于模型输出结果都具有影响，需要通过敏感性分析选取其中敏感性较大的参数进行下一步校正。%
+    本文根据公开的源码和相关参数对应公式，对品种参数取值范围进行了合理化的约束。%
+    在修改后的 Cotton2K 模型中品种参数文件以 \texttt{cultivar\_parameters} 字段保存，模型参数服从均匀分布。%
+    本文主要对 50 个原始品种参数和 20 个修改模型参数进行敏感性分析，原始模型参数的名称及取值范围如表 \ref{tab:saParameters} 所示。%
+    根据第 \ref{chap:modelModification} 章的内容，本文还对模型进行了修改，增加了更为详细的分层的冠层子模块，因为这个改动，改版的 Cotton2K 模型比原版的模型多了 20 个参数，%
+    为 LIPAR01 至 LIPAR20，取值范围根据 GOSSYM 模型和 WOFOST 模型中相关的参数范围扩大 100\% 而得。
+    \begin{table}
+        \caption{原版 Cotton2K 参数列表及取值范围}\label{tab:saParameters}
+        \small
+        \begin{tabular}{llrr|llrr}
+            \toprule
+            参数     & 功能描述             & 下限  & 上限  & 参数     & 功能描述                   & 下限   & 上限   \\
+            \midrule
+            VARPAR01 & 种植密度对生长的影响 & 0.00  & 0.08  & VARPAR26 & 株高生长                   & 0.70   & 1.30   \\
+            VARPAR02 & 现蕾前的叶生长       & 0.00  & 0.60  & VARPAR27 & 碳胁迫下的主茎节点延迟     & 0.50   & 1.00   \\
+            VARPAR03 & 现蕾前的叶生长       & 0.00  & 0.10  & VARPAR28 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   \\
+            VARPAR04 & 现蕾前的叶生长       & 0.00  & 1.00  & VARPAR29 & 碳胁迫下的坐果节点延迟     & 1.00   & 3.00   \\
+            VARPAR05 & 主茎叶生长           & 0.50  & 3.00  & VARPAR30 & 温度对方铃形成的影响       & 0.70   & 1.30   \\
+            VARPAR06 & 主茎叶生长           & 0.00  & 0.02  & VARPAR31 & 现蕾前节点的发育           & 1.00   & 5.00   \\
+            VARPAR07 & 主茎叶生长           & 18.0  & 28.0  & VARPAR32 & 现蕾前节点的发育           & 1.00   & 3.00   \\
+            VARPAR08 & 果汁页生长           & 0.00  & 0.20  & VARPAR33 & 现蕾前节点的发育           & 0.50   & 1.00   \\
+            VARPAR09 & 铃生长周期           & 18.9  & 38.0  & VARPAR34 & 初始叶面积                 & 0.01   & 0.10   \\
+            VARPAR10 & 铃生长速率           & 0.10  & 0.45  & VARPAR35 & 果枝发育                   & -32.0  & -26.0  \\
+            VARPAR11 & 最大铃干物质         & 3.00  & 15.0  & VARPAR36 & 坐果节点的发育             & -57.0  & -49.0  \\
+            VARPAR12 & 方铃展前茎生长       & 0.00  & 2.00  & VARPAR37 & 坐果节点的发育             & 0.00   & 2.00   \\
+            VARPAR13 & 方铃展前茎生长       & 0.00  & 2.00  & VARPAR38 & 落叶剂对不同叶龄叶片的影响 & 0.00   & 5.00   \\
+            VARPAR14 & 方铃展前茎生长       & 0.00  & 0.08  & VARPAR39 & 温度对吐絮的影响           & -306.0 & -240.0 \\
+            VARPAR15 & 方铃展后茎生长       & 1.00  & 4.00  & VARPAR40 & 温度对吐絮的影响           & 0.70   & 1.30   \\
+            VARPAR16 & 方铃展后茎生长       & 0.50  & 2.00  & VARPAR41 & 温度对衣份率的影响         & 45.0   & 60.0   \\
+            VARPAR17 & 方铃展后茎生长       & 0.00  & 1.00  & VARPAR42 & 温度对衣份率的影响         & 0.30   & 0.90   \\
+            VARPAR18 & 方铃展后茎生长       & 0.00  & 0.20  & VARPAR43 & 碳胁迫下的脱落强度         & 0.30   & 0.70   \\
+            VARPAR19 & 株高生长             & 0.00  & 0.50  & VARPAR44 & 水分胁迫下的脱落强度       & 0.30   & 0.70   \\
+            VARPAR20 & 株高生长             & 0.00  & 0.10  & VARPAR45 & 方铃脱落的概率             & 0.10   & 0.50   \\
+            VARPAR21 & 株高生长             & 10.0  & 18.0  & VARPAR46 & 方铃脱落的概率             & 0.00   & 0.15   \\
+            VARPAR22 & 株高生长             & -4.00 & -2.00 & VARPAR47 & 铃脱落的概率               & 1.00   & 10.0   \\
+            VARPAR23 & 株高生长             & 0.09  & 0.12  & VARPAR48 & 铃脱落的概率               & 0.30   & 1.50   \\
+            VARPAR24 & 株高生长             & 0.00  & 0.50  & VARPAR49 & 铃脱落的概率               & 5.00   & 15.0   \\
+            VARPAR25 & 株高生长             & 1.00  & 4.00  & VARPAR50 & 铃脱落的概率               & 0.20   & 1.80   \\
+            \bottomrule
+        \end{tabular}
+    \end{table}
 
-\section{Cotton2K 模型的运行}
-Cotton2K 模型需要输入的参数较多，模型结构较为复杂，在第 \ref{sec:io} 节中论述，本文对模型的输入输出格式进行了修改简化，提高了模型模拟效率。
+    \section{Cotton2K 模型的运行}
+    Cotton2K 模型需要输入的参数较多，模型结构较为复杂，在第 \ref{sec:io} 节中论述，本文对模型的输入输出格式进行了修改简化，提高了模型模拟效率。
 
-模型的需要如下的输入参数
-\begin{enumerate}
-    \item 关键农艺措施的时间，如播种日期等；
-    \item 试验站的地理信息，如经纬度、海拔等；
-    \item 土壤理化性质，包括砂份、壤份、土壤水分传导率、 Penman 公式参数等；
-    \item 气象数据，包括 2m 最高和最低气温、降水、风速、太阳净辐射强度等；
-    \item 灌溉和施肥的相关数据，包括日期、用量、是否随水施肥等；
-    \item 棉花品种参数，如表 \ref{tab:saParameters} 所示。
-\end{enumerate}
+    模型的需要如下的输入参数
+    \begin{enumerate}
+        \item 关键农艺措施的时间，如播种日期等；
+        \item 试验站的地理信息，如经纬度、海拔等；
+        \item 土壤理化性质，包括砂份、壤份、土壤水分传导率、 Penman 公式参数等；
+        \item 气象数据，包括 2m 最高和最低气温、降水、风速、太阳净辐射强度等；
+        \item 灌溉和施肥的相关数据，包括日期、用量、是否随水施肥等；
+        \item 棉花品种参数，如表 \ref{tab:saParameters} 所示。
+    \end{enumerate}
 
-为了运行效率，本文基于 Python 的 multiprocessing 标准库开发了一个并行计算脚本，充分利用现代计算机的多核中央处理器性能，将不同进程的模拟结果汇总到统一的数据库中保存，以进行下一步操作。
+    为了运行效率，本文基于 Python 的 multiprocessing 标准库开发了一个并行计算脚本，充分利用现代计算机的多核中央处理器性能，将不同进程的模拟结果汇总到统一的数据库中保存，以进行下一步操作。
 
 
-\section{敏感性分析结果}
-\subsection{皮棉产量的敏感性分析}
-\begin{figure}
-    \centering
-    \includegraphics[scale=0.4]{皮棉产量 原版.png}
-    \includegraphics[scale=0.4]{皮棉产量 改版.png}
-    \caption{皮棉产量的敏感性分析结果}\label{fig:saLintYield}
-\end{figure}
+    \section{敏感性分析结果}
+    \subsection{皮棉产量的敏感性分析}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.4]{皮棉产量 原版.png}
+        \includegraphics[scale=0.4]{皮棉产量 改版.png}
+        \caption{皮棉产量的敏感性分析结果}\label{fig:saLintYield}
+    \end{figure}
 
-从图 \ref{fig:saLintYield} 中可以看出，原版模型中 VARPAR40 (温度对吐絮的影响) 的一阶敏感性指数最高，%
-其他大于 0.1 的影响棉花产量的敏感参数有
-VARPAR43 (碳胁迫下的脱落强度)、%
-VARPAR11 (最大铃干物质)、%
-VARPAR30 (温度对方铃形成的影响)、%
-VARPAR05 (主茎叶生长)。%
-改版后的模型的敏感性则略有不同，%
-VARPAR11 (最大铃干物质) 的一阶敏感性指数最高，%
-VARPAR01 (种植密度对生长的影响)、%
-VARPAR28 (碳胁迫下的坐果节点延迟)、%
-VARPAR30 (温度对方铃形成的影响)、%
-VARPAR36 (坐果节点的发育)、%
-VARPAR40 (温度对吐絮的影响)、%
-VARPAR42 (温度对衣份率的影响)、%
-VARPAR41 (温度对衣份率的影响)、%
-VARPAR34 对皮棉产量的敏感性依次降低，但都为敏感性指数大于 0.1 的敏感性参数。%
-从如上结果可以看出，VARPAR40 (温度对吐絮的影响)、VARPAR30 (温度对方铃形成的影响) 这两个参数在模型修改前后均为敏感性参数。%
+    从图 \ref{fig:saLintYield} 中可以看出，原版模型中 VARPAR40 (温度对吐絮的影响) 的一阶敏感性指数最高，%
+    其他大于 0.1 的影响棉花产量的敏感参数有
+    VARPAR43 (碳胁迫下的脱落强度)、%
+    VARPAR11 (最大铃干物质)、%
+    VARPAR30 (温度对方铃形成的影响)、%
+    VARPAR05 (主茎叶生长)。%
+    改版后的模型的敏感性则略有不同，%
+    VARPAR11 (最大铃干物质) 的一阶敏感性指数最高，%
+    VARPAR01 (种植密度对生长的影响)、%
+    VARPAR28 (碳胁迫下的坐果节点延迟)、%
+    VARPAR30 (温度对方铃形成的影响)、%
+    VARPAR36 (坐果节点的发育)、%
+    VARPAR40 (温度对吐絮的影响)、%
+    VARPAR42 (温度对衣份率的影响)、%
+    VARPAR41 (温度对衣份率的影响)、%
+    VARPAR34 对皮棉产量的敏感性依次降低，但都为敏感性指数大于 0.1 的敏感性参数。%
+    从如上结果可以看出，VARPAR40 (温度对吐絮的影响)、VARPAR30 (温度对方铃形成的影响) 这两个参数在模型修改前后均为敏感性参数。%
 
-\subsection{株高的敏感性分析}
-\begin{figure}
-    \centering
-    \includegraphics[scale=0.4]{株高 原版.png}
-    \includegraphics[scale=0.4]{株高 改版.png}
-    \caption{棉花株高的敏感性分析结果}\label{fig:saPlantHeight}
-\end{figure}
+    \subsection{株高的敏感性分析}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.4]{株高 原版.png}
+        \includegraphics[scale=0.4]{株高 改版.png}
+        \caption{棉花株高的敏感性分析结果}\label{fig:saPlantHeight}
+    \end{figure}
 
-从图 \ref{fig:saPlantHeight} 中可以看出，在原版模型中 VARPAR01 (种植密度对生长的影响) 的一阶敏感性指数最高，%
-VARPAR26 (株高生长)、%
-VARPAR19 (株高生长)、%
-VARPAR32 (现蕾前节点的发育)、%
-VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数也大于 0.1。%
-改版后的模型中同样也是 VARPAR01 (种植密度对生长的影响) 的一阶敏感性指数最高，%
-其他一阶敏感性指数大于 0.1 的参数，如 VARPAR32 (现蕾前节点的发育)、%
-VARPAR30 (温度对方铃形成的影响)、%
-VARPAR31 (现蕾前节点的发育)、%
-VARPAR36 (坐果节点的发育)、%
-VARPAR26 (株高生长)、%
-VARPAR19 (株高生长) 对棉花株高的敏感性依次降低。%
-在模型修改前后，如 VARPAR32 (现蕾前节点的发育)、VARPAR30 (温度对方铃形成的影响) 等与方铃 (蕾) 相关的参数敏感性较高的可能原因是，%
-在 Cotton2K 模型模拟过程中，%
-方铃出现后对株高有极强的抑制作用，现蕾后株高的增长会大幅下降。
+    从图 \ref{fig:saPlantHeight} 中可以看出，在原版模型中 VARPAR01 (种植密度对生长的影响) 的一阶敏感性指数最高，%
+    VARPAR26 (株高生长)、%
+    VARPAR19 (株高生长)、%
+    VARPAR32 (现蕾前节点的发育)、%
+    VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数也大于 0.1。%
+    改版后的模型中同样也是 VARPAR01 (种植密度对生长的影响) 的一阶敏感性指数最高，%
+    其他一阶敏感性指数大于 0.1 的参数，如 VARPAR32 (现蕾前节点的发育)、%
+    VARPAR30 (温度对方铃形成的影响)、%
+    VARPAR31 (现蕾前节点的发育)、%
+    VARPAR36 (坐果节点的发育)、%
+    VARPAR26 (株高生长)、%
+    VARPAR19 (株高生长) 对棉花株高的敏感性依次降低。%
+    在模型修改前后，如 VARPAR32 (现蕾前节点的发育)、VARPAR30 (温度对方铃形成的影响) 等与方铃 (蕾) 相关的参数敏感性较高的可能原因是，%
+    在 Cotton2K 模型模拟过程中，%
+    方铃出现后对株高有极强的抑制作用，现蕾后株高的增长会大幅下降。
 
-\subsection{光能截获率的敏感性分析}
-\begin{figure}
-    \centering
-    \includegraphics[scale=0.4]{光能截获率 原版.png}
-    \includegraphics[scale=0.4]{光能截获率 改版.png}
-    \caption{光能截获率的敏感性分析结果}\label{fig:saLightInterception}
-\end{figure}
+    \subsection{光能截获率的敏感性分析}
+    \begin{figure}
+        \centering
+        \includegraphics[scale=0.4]{光能截获率 原版.png}
+        \includegraphics[scale=0.4]{光能截获率 改版.png}
+        \caption{光能截获率的敏感性分析结果}\label{fig:saLightInterception}
+    \end{figure}
 
-从图 \ref{fig:saLightInterception} 中可以看出，在原版模型中最高的一阶敏感性指数参数为 VARPAR26 (株高生长)，%
-VARPAR01 (种植密度对生长的影响) 与 VARPAR03 (现蕾前的叶生长) 的一阶敏感性指数紧随其后，
-VARPAR32 (现蕾前节点的发育)、%
-VARPAR19 (株高生长)、%
-VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数也大于 0.1。%
-改版后的模型中 VARPAR34 (初始叶面积) 的一阶敏感性指数最高，%
-LIPAR04 (15cm 至 20cm 高度间的光能截获率参数)、
-VARPAR04 (现蕾前的叶生长)、
-VARPAR26 (株高生长)、%
-LIPAR03 (10cm 至 15cm 高度间的光能截获率参数)、%
-VARPAR36 (坐果节点的发育)、%
-VARPAR33 (现蕾前节点的发育)、%
-VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数同样大于 0.1。
-值得注意的是，LIPAR04 (15cm 至 20cm 高度间的光能截获率参数) 与 LIPAR03 (10cm 至 15cm 高度间的光能截获率参数) 的在新增的 20 个参数中敏感性最高，%
-LIPAR02 (5cm 至 10cm 高度间的光能截获率参数) 也大于 0.05，而高于 15 cm 的光能截获率参数敏感性都小于 0.001。%
-这说明，处于15cm 至 20cm 高度间的叶面积对光能截获率的贡献最大，光能在冠层的垂直分布是不均匀的。%
-这一点在随后的章节会详细讨论。
+    从图 \ref{fig:saLightInterception} 中可以看出，在原版模型中最高的一阶敏感性指数参数为 VARPAR26 (株高生长)，%
+    VARPAR01 (种植密度对生长的影响) 与 VARPAR03 (现蕾前的叶生长) 的一阶敏感性指数紧随其后，
+    VARPAR32 (现蕾前节点的发育)、%
+    VARPAR19 (株高生长)、%
+    VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数也大于 0.1。%
+    改版后的模型中 VARPAR34 (初始叶面积) 的一阶敏感性指数最高，%
+    LIPAR04 (15cm 至 20cm 高度间的光能截获率参数)、
+    VARPAR04 (现蕾前的叶生长)、
+    VARPAR26 (株高生长)、%
+    LIPAR03 (10cm 至 15cm 高度间的光能截获率参数)、%
+    VARPAR36 (坐果节点的发育)、%
+    VARPAR33 (现蕾前节点的发育)、%
+    VARPAR30 (温度对方铃形成的影响) 的一阶敏感性指数同样大于 0.1。
+    值得注意的是，LIPAR04 (15cm 至 20cm 高度间的光能截获率参数) 与 LIPAR03 (10cm 至 15cm 高度间的光能截获率参数) 的在新增的 20 个参数中敏感性最高，%
+    LIPAR02 (5cm 至 10cm 高度间的光能截获率参数) 也大于 0.05，而高于 15 cm 的光能截获率参数敏感性都小于 0.001。%
+    这说明，处于15cm 至 20cm 高度间的叶面积对光能截获率的贡献最大，光能在冠层的垂直分布是不均匀的。%
+    这一点在随后的章节会详细讨论。
 
-\section{本章小结}
-本章以 “中棉 619” 为研究对象，%
-选择 Cotton2K 模型的 50 个品种参数和本文的改版模型中新增的 20 个参数，%
-确定范围和分布形式，在 2020 年气象条件下驱动模型运行，并对不同输出变量进行 Sobol 全局敏感性分析。%
-通过皮棉产量、棉花株高和光能截获率的敏感性指数大小，找出对各自影响较大的参数。%
-本章敏感性分析结果为第 \ref{chap:moo} 章模型校正做准备。
+    \section{本章小结}
+    本章以 “中棉 619” 为研究对象，%
+    选择 Cotton2K 模型的 50 个品种参数和本文的改版模型中新增的 20 个参数，%
+    确定范围和分布形式，在 2020 年气象条件下驱动模型运行，并对不同输出变量进行 Sobol 全局敏感性分析。%
+    通过皮棉产量、棉花株高和光能截获率的敏感性指数大小，找出对各自影响较大的参数。%
+    本章敏感性分析结果为第 \ref{chap:moo} 章模型校正做准备。
+\end{spacing}
