--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{longtable}
 \usepackage{lscape} % one page table
 \usepackage{multirow}
+\usepackage{pdfpages}
 \usepackage{pgfplots}
 \usepackage{setspace}
 \usepackage{siunitx}
@@ -43,14 +44,14 @@
 \newcommand{\authoryearcite}[1]{\citeauthor{#1} (\citeyear{#1})}
 \ctexset{
   chapter = {
-    beforeskip = 0pt,
+    beforeskip = -40pt,
     afterskip = 0pt,
     number = \arabic{chapter},
     format = \zihao{3} \heiti \bfseries \centering
    },
   section/format = \zihao{4} \songti \bfseries \raggedright,
-  section/beforeskip = 0pt,
-  section/afterskip = 0pt,
+  section/beforeskip = -2.08333333pt,
+  section/afterskip = -2.08333333pt,
   subsection/format = \zihao{-4} \youyuan \bfseries,
   subsection/beforeskip = 0pt,
   subsection/afterskip = 0pt,
@@ -71,31 +72,6 @@ process/.style = {base, rectangle},
 data/.style = {base, trapezium, trapezium left angle=60, trapezium right angle=120},
 decision/.style = {base, diamond, aspect=2},
 }
-% \lstset{
-%   basicstyle          =   \sffamily,          % 基本代码风格
-%   keywordstyle        =   \bfseries,          % 关键字风格
-%   commentstyle        =   \rmfamily\itshape,  % 注释的风格，斜体
-%   stringstyle         =   \ttfamily,  % 字符串风格
-%   flexiblecolumns,                % 别问为什么，加上这个
-%   numbers             =   left,   % 行号的位置在左边
-%   showspaces          =   false,  % 是否显示空格，显示了有点乱，所以不现实了
-%   numberstyle         =   \zihao{-5}\ttfamily,    % 行号的样式，小五号，tt等宽字体
-%   showstringspaces    =   false,
-%   captionpos          =   t,      % 这段代码的名字所呈现的位置，t指的是top上面
-%   frame               =   lrtb,   % 显示边框
-% }
-% \lstdefinestyle{JSONSchema}{
-%   language        =   Python, % 语言选Python
-%   basicstyle      =   \zihao{-5}\ttfamily,
-%   numberstyle     =   \zihao{-5}\ttfamily,
-%   keywordstyle    =   \color{blue},
-%   keywordstyle    =   [2] \color{teal},
-%   stringstyle     =   \color{magenta},
-%   commentstyle    =   \color{red}\ttfamily,
-%   breaklines      =   true,   % 自动换行，建议不要写太长的行
-%   columns         =   fixed,  % 如果不加这一句，字间距就不固定，很丑，必须加
-%   basewidth       =   0.5em,
-% }
 \begin{document}
 
 % 图表标题设置，主要为了图表标题后无冒号，改用空格分隔
@@ -108,6 +84,7 @@ decision/.style = {base, diamond, aspect=2},
 \pagestyle{empty}
 \frontmatter
 \include{titlepage}
+\includepdf{学位论文独创性声明.pdf}
 \include{abstract}
 % 目录首页不需要页码，但默认目录首页是plain的，所以用empty覆盖
 \fancypagestyle{plain}{
@@ -131,24 +108,23 @@ decision/.style = {base, diamond, aspect=2},
   \include{conclusion}
   \backmatter
   \printbibliography
-  \chapter*{致谢}
+  % \chapter*{致谢}
 
 
-  \chapter*{作者简介}
+  % \chapter*{作者简介}
+  % 唐梓涯，男，汉族，出生于 1992 年 3 月 13 日，江苏省如东县人。2010 年 9 月，就读于西北农林科技大学植物保护学院，植物保护专业。2014 年 6 月获得农学学士学位。2019 年 9 月，考入塔里木大学信息工程学院，农业电气化与自动化专业，攻读工学硕士学位。
 
-  唐梓涯，男，汉族，出生于 1992 年 3 月 13 日，江苏省如东县人。2010 年 9 月，就读于西北农林科技大学植物保护学院，植物保护专业。2014 年 6 月获得农学学士学位。2019 年 9 月，考入塔里木大学信息工程学院，农业电气化与自动化专业，攻读工学硕士学位。
+  % 公开发表的论文：
 
-  公开发表的论文：
+  % [1] 孟文博,王德胜,张楠楠,费浩,唐梓涯,王涛,白铁成.响应气候变化的棉花生长模拟与县域尺度产量评估[J].核农学报,2021,35(07):1648-1657.
 
-  [1] 孟文博,王德胜,张楠楠,费浩,唐梓涯,王涛,白铁成.响应气候变化的棉花生长模拟与县域尺度产量评估[J].核农学报,2021,35(07):1648-1657.
-
-  获得的奖励
-  \begin{enumerate}
-    \item 2019 年“华为杯”第十六届数学建模竞赛三等奖。
-    \item 2019{-}2020 学年研究生学业奖学金二等奖。
-    \item 2020{-}2021 学年研究生学业奖学金三等奖。
-    \item 2021 年“华为杯”第十八届数学建模竞赛三等奖。
-    \item 2021 年第十二届蓝桥杯全国软件和信息技术专业人才大赛 Python 组全国总决赛三等奖。
-  \end{enumerate}
+  % 获得的奖励
+  % \begin{enumerate}
+  %   \item 2019 年“华为杯”第十六届数学建模竞赛三等奖。
+  %   \item 2019{-}2020 学年研究生学业奖学金二等奖。
+  %   \item 2020{-}2021 学年研究生学业奖学金三等奖。
+  %   \item 2021 年“华为杯”第十八届数学建模竞赛三等奖。
+  %   \item 2021 年第十二届蓝桥杯全国软件和信息技术专业人才大赛 Python 组全国总决赛三等奖。
+  % \end{enumerate}
 \end{spacing}
 \end{document}
