--- a/thesis.bib
+++ b/thesis.bib
@@ -907,7 +907,7 @@
   primaryclass = {cs, math, stat},
   url = {http://arxiv.org/abs/2008.08051},
   urldate = {2022-03-24},
-  abstract = {Quasi-Monte Carlo (QMC) points are a substitute for plain Monte Carlo (MC) points that greatly improve integration accuracy under mild assumptions on the problem. Because QMC can give errors that are \$o(1/n)\$ as \$n\textbackslash to\textbackslash infty\$, changing even one point can change the estimate by an amount much larger than the error would have been and worsen the convergence rate. As a result, certain practices that fit quite naturally and intuitively with MC points are very detrimental to QMC performance. These include thinning, burn-in, and taking sample sizes such as powers of \$10\$, other than the ones for which the QMC points were designed. This article looks at the effects of a common practice in which one skips the first point of a Sobol' sequence. The retained points ordinarily fail to be a digital net and when scrambling is applied, skipping over the first point can increase the numerical error by a factor proportional to \$\textbackslash sqrt\{n\}\$ where \$n\$ is the number of function evaluations used.},
+  abstract = {Quasi-Monte Carlo (QMC) points are a substitute for plain Monte Carlo (MC) points that greatly improve integration accuracy under mild assumptions on the problem. Because QMC can give errors that are \$o(1/n)\$ as \$n\textbackslash to\textbackslash infty\$, changing even one point can change the estimate by an amount much larger than the error would have been and worsen the convergence rate. As a result, certain practices that fit quite naturally and intuitively with MC points are very detrimental to QMC performance. These include thinning, burn-in, and taking sample sizes such as powers of \$10\$, other than the ones for which the QMC points were designed. This article looks at the effects of a common practice in which one skips the first point of a Sobol sequence. The retained points ordinarily fail to be a digital net and when scrambling is applied, skipping over the first point can increase the numerical error by a factor proportional to \$\textbackslash sqrt\{n\}\$ where \$n\$ is the number of function evaluations used.},
   archiveprefix = {arXiv},
   keywords = {Mathematics - Numerical Analysis,Statistics - Computation}
 }
