PRE: submit to jiance888.com again

--- a/intro.tex
+++ b/intro.tex
@@ -2,9 +2,10 @@
 \section{研究背景及意义}
 新疆南部地区 (南疆) 日照时间长、光热资源丰富，为优质棉花的生长提供了绝佳的自然条件.
 2021 年新疆棉花播种面积 2506.1 千公顷 (全国 3028.1 千公顷)，产量 500.2 万吨 (全国 512.9 万吨) \cite{国家统计局关于2021年棉花产量的公告}，是我国和世界最具发展前景的优质棉生产基地。
-上世纪 80 年代以来，新疆在棉花种植上大范围推广使用地膜覆盖技术，给新疆农业增产、农民增收带来了巨大效益。
-但随着地膜投入量的不断增加，残留地膜回收率低，土壤中残膜量逐步增加，不仅造成土壤结构破坏、环境污染等一系列问题，而且对棉花产量和纤维品质也有很大影响。
-中国工程院院士喻树迅团队初步实现了 “中棉 619” 早熟品种在南疆地区的无膜化种植目标，连续 6 年亩产 320{-}350 公斤，对减少新疆棉田残膜对生态环境和原棉的污染意义重大\cite{yu2019}。
+新疆从 1980 年代开始大范围推广使用地膜覆盖技术种植棉花，这一举措被誉为“白色革命”，大幅提高了棉花的生产效率，带来了丰厚的经济效益。%
+但残留地膜回收率低，在土壤中难以降解，土壤中残膜量逐年增加，不仅对土壤结构造成破坏，而且对混入残膜的纤维品质也降低了，“白色革命”终成“白色污染”。
+中国工程院院士喻树迅团队连续 7 年在南疆多地的试验示范站实现了棉花的无膜化种植，成功培育出了早熟品种“中棉 619”，%
+可实现平均亩产 365 公斤\cite{yu2019}。
 然而，无膜棉的种植与推广还有诸多问题需要解决，如播种密度和肥水调控等问题急需深入研究。
 因此，在南疆干旱区开展无膜棉生长和水分运移模拟研究，%
 对指导无膜棉播种日期、播种量、精准灌溉和提高产量具有重要意义。
@@ -20,12 +21,11 @@
 为了使棉花生产具有可持续性，还必须考虑水和能源资源的限制。%
 通过更明智的灌溉和氮肥管理，更好地了解气候对棉花产量的影响，进一步推进棉花育种和遗传学，更多地采用精准农业技术，以及增加对棉花遗传学与环境管理（GEM）相互作用的了解，可以实现这些改进棉花生产的目标。
 
-作物生长模型通过数学方程将作物的生长发育、光合生产、器官建成和产量形成等过程及其所处环境和栽培管理技术体系连接成为一个整体，
-通过计算机定量计算并进行动态模拟，成为掌握作物生长发育状况，优化种植管理的重要手段。
+作物生长模型以经验公式的形式将作物的生长发育、光合生产、器官建成和产量形成等过程描述出来，%
+与环境与栽培管理有机结合，通过计算机程序对作物生长指标动态地进行定量描述。
 棉花生产中种植系统模拟模型的开发和应用有着悠久而丰富的历史，从20世纪60年代在美国东南部开始，现已扩展到全球主要的棉花生产地区。%
-国外发展比较成熟的棉花生长模型包括 GOSSYM\cite{baker1976}，Cotton2K\cite{cotton2kv4}，COTCO2\cite{wall1994}，OZCOT\cite{hearn1994} 和 CROPGRO-Cotton\cite{jones2003}，%
+目前主流的专用棉花生长模型主要有 GOSSYM\cite{baker1976}，COTCO2\cite{wall1994}，OZCOT\cite{hearn1994}，CROPGRO-Cotton\cite{jones2003} 和 Cotton2K\cite{cotton2kv4} 等，%
 另外，一些通用的作物生长模型也被用于模拟棉花生长，如 EPIC\cite{williams1989}，WOFOST\cite{vanDiepen1989WOFOST}，SUCROS\cite{vanittersum2003}，GRAMI\cite{ko2005}，CropSyst\cite{sommer2008}和 AquaCrop\cite{steduto2009}。
-本节将对它们进行回顾。%
 模型的应用领域包括作物用水和灌溉水管理、氮素动力学和肥料管理、遗传学和作物改良、气候学、全球气候变化、精准农业、模型与传感器数据整合、经济学和课堂教学。%
 总的来说，在上个世纪重视棉花模型的开发，本世纪以来则越来越重视棉花模型的应用\cite{thorp2014}。%
 尽管的最早棉花模型已经有 50 年的历史，但棉花模型之间的对比较少\cite{thorp2014}。%
@@ -53,8 +53,8 @@
     \end{tabular}
 \end{table}
 
-这些模型通过模拟气象、土壤水分和养分对植物生长发育的贡献来估算作物产量。
-然而，用于模拟这些过程的方法、模拟细节和产量组分在现有作物模型中存在一定差异 (表 \ref{tab:growdev})\cite{thorp2014}。
+这些模型通过模拟计算大气、土壤和植物之间的交互作用和水分、能量平衡来实现对棉花生长过程的模拟。%
+然而，不同的作物生长模型在选择模拟这些过程的方法和实现细节存在一定差异 (表 \ref{tab:growdev})\cite{thorp2014}，%
 但主要过程都包括了物候学、光能截获、碳 (C) 同化、呼吸作用、器官形成、生物量积累与分配和胁迫影响等。
 
 一些新发展的通用模型理论和方法也对棉花生长模拟的研究具有重要的推动作用。
@@ -64,13 +64,11 @@
 2021 年最新版本的 SWAP 4.0 版本\cite{swap2021}综合考虑了水、热、冷和盐分胁迫对蒸发蒸腾的影响，%
 多尺度 SWAP 模型是否可以改进已提出的棉花模型的水分运移模拟值得深入分析和探讨。
 
-虽然中国的棉花生长模型研究起步较晚，但作为棉花生产世界领先的国家，
-棉花生长模拟的研究发展较快，比较有代表性的是潘学标等开发的 COTGROW\cite{pan1996} 模型，%
-此外，南京农业大学的曹卫星教授带领的博士 \authornumcite{zhang2003}、\authornumcite{ma2004}和\authornumcite{chen2006} 等也分别建立了棉花生长和品质形成模拟模型，%
-这些模型在借鉴国外模型理念基础上，加入了我国特有的管理措施如化控、覆膜等。
-另外，国内学者也开发了棉花发育阶段和蕾铃模拟模型\cite{ma2005}、棉籽生长、油和蛋白质含量模拟模型\cite{li2009}和基于气温、%
-太阳辐照度和 N 效应的棉纤维长度和强度的模拟模型\cite{zhao2012}等。
-然而，不同的模型的性能会随着研究的品种、种植模式、生长环境和使用目标的变化呈现一定的差异性。
+中国作为世界上的主要棉花生产国，对棉花生长模拟的研究发展飞速，%
+比较有代表性的是潘学标等开发的 COTGROW\cite{pan1996} 模型，%
+此外，南京农业大学的曹卫星教授带领的科研团队\cite{zhang2003,ma2004,chen2006}也分别建立了棉花生育周期和品质形成模拟模型，%
+这些模型相比国外的棉花生长模型，加入了如化控、覆膜等我国特有的管理措施。%
+然而，由于生长模型的复杂性，对于不同的场景，不同模型之间的表现存在一定的差异性。
 
 \begin{table}
     \small
@@ -140,25 +138,25 @@
 
 棉花生长模型最基本的目的是预测产量，近几年，国外已经再水分利用效率评价和灌溉管理\cite{baumhardt2014,booker2014,booker2015,modala2015,thorp2015,anapalli2016,attia2016,linker2016,tsakmakis2018,thorp2019,thorp2020,thorp2020a}、
 氮磷动态和施肥管理\cite{shumway2012,amin2017,arshad2017,zurweller2019}、%
-气象变化响应、%
+气象变化响应\cite{abbas2020}、%
 品质模拟\cite{ma2005}、%
 打顶和生产管理\cite{yang2008}等方面开展了大量研究。
 为了不同的研究目的，所选择的模型也存在较大的差异。
 国内学者也在产量预测、模型性能评价、水分使用效率评价、品质成分含量模拟、株高生长模拟、水氮耦合效应评价、水盐运移、根系生长模拟和模型敏感性与不确定性分析等方面开展了研究和探索。
 然而，在不同生长发育时期，冠层截获的光能在不同空间的分布比例存在一定的差异性和规律性，定量化描述这个过程有望提高光合作用模拟精度。
 
-值得注意的是， GOSSYM 及其后勤版本如 Cotton2K 是世界上最成功的棉花模型之一。
-Cotton2K 模型基于 GOSSYM 模型的过程公式，借鉴了 SIMCOTI ， SIMCOTII 和 CALGOS 模型的算法，使用每小时的气象数据计算水分和能量平衡，
-提高了干旱和灌溉条件下的棉花生长模拟的精度和适用性。
+值得注意的是， GOSSYM 及其后继版本如 Cotton2K 是世界上最成功的棉花模型之一。
+Cotton2K 模型基于 GOSSYM 模型的过程公式，借鉴了其他棉花生长模型的算法思想，以小时为单位的高时间分辨率计算水分、物质和能量平衡，%
+提高了对干旱地区依赖灌溉的棉花生长模拟的精度和适用性。
 虽然模型也考虑了盐分和水分在土壤的分布，然而，使用的 Richards 方程 \cite{richards1931} 计算水分运移过程存在上下边界粗糙的问题 \cite{thorp2014}，
 而且对于滴灌模式，沿滴灌带垂直方向的根系分布也应被精细的考虑；
 另外，实际蒸腾计算过程中对冠层光截获因子的精细模拟也有改进的空间。
 
 \subsection{Cotton2K 模型的应用研究}
-Cotton2K 模型是由耶路撒冷希伯来大学农学院的 Avishalom Marani 博士开发的。
-该模型的源代码是用C++编写的，可以免费下载 \cite{cotton2kv4}。
-Cotton2K 使用 GOSSYM \cite{baker1976,baker1983} 的基于过程的方程，其历史可以追溯到其他棉花建模工作，包括SIMCOTI \cite{baker1972}、SIMCOTII \cite{jones1974}, 和 CALGOS \cite{marani1992a,marani1992b,marani1992c}。
-Cotton2K 的主要目的是为如美国西部和以色列这样的干旱、灌溉环境下的棉花生产提供一个更有用的模型。
+Cotton2K 模型是由 Avishalom Marani 教授在美国做访问学者时开发的。
+该模型的源代码是用 C++ 编写的，可以免费下载 \cite{cotton2kv4}。
+Cotton2K 主要基于 GOSSYM \cite{baker1976,baker1983} 开发，同时也参考了其他棉花生长模型，包括SIMCOTI \cite{baker1972}、SIMCOTII \cite{jones1974}, 和 CALGOS \cite{marani1992a,marani1992b,marani1992c}。
+开发 Cotton2K 的主要目的是为如美国西部和以色列这样的干旱、灌溉环境下的棉花生产提供一个更有用的模型。
 
 \authoryearcite{cotton2kv4} 对Cotton2K的历史、主要特征、科学原理和投入要求作了总体描述。
 Cotton2K 和 GOSSYM 的根本区别在于对天气数据的要求。
@@ -258,8 +256,8 @@ Cotton2K 在这个方面亟待改进。
     \item Cotton2K 模型的校准与验证\\%
           参考相关文献中对 Cotton2K 模型参数敏感性分析结果，利用 2019 年与 2020 年两年的田间实验数据，使用修改后的 Thorp 方法\cite{thorp2019} 分别对原版模型和修改后的模型的参数进行校准。%
           将 2021 年的田间实验数据作为验证集对校准后的 Cotton2K 进行验证，评估 Cotton2K 模型对中棉 619 的模拟精度。
-    \item 中棉 619 冠层光能截获分布规律\\%
-          利用 2019 年至 2020 年不同生育期冠层光合有效辐射数据，将棉花冠层分为 20 个等高的子层，研究棉花冠层垂直方向的的光能截获分布规律。
+    \item 中棉 619 冠层垂直方向光能截获时空分布规律\\%
+          利用 2019 年至 2020 年生育期内采集的冠层光合有效辐射 (PAR) 数据，将棉花冠层分为 20 个等高的子层，研究棉花冠层垂直方向的的光能截获分布规律。
 \end{enumerate}
 
 \subsection{技术路线}
@@ -326,11 +324,9 @@ Cotton2K 在这个方面亟待改进。
 第 6 章，总结与展望。总结了实验的内容和实验结果，阐述了实验中的不足以及未来的改进方案。
 
 \section{本章小结}
-本小结从研究背景及意义入手，首先介绍了棉花在世界经济发展和我国种植业中的重要地位。%
-然后阐述了地膜栽培技术发展以及地膜技术的引用给我国农业发展带来的巨大经济效益。%
-地膜技术是一把双刃剑，它在给我国农业发展带来巨大经济效益的同时，也给我国带来了残膜污染的问题。%
-在可持续发展理念的号召下，解决残膜污染问题迫在眉睫。%
-各个学者在解决残膜污染方面探究了很多的方法，其中中国农业科学院棉花研究所成功培育出适用于无膜直播的特早熟棉花新品种中棉 619 的成功试行，为我们开辟了彻底解决残膜污染问题的新方向。%
-中棉 619 能否大面积的推广与应用，对彻底解决国内棉田残膜污染的问题，防止耕地资源质量下降，推动棉花产业向绿色可持续发展方向转型具有重要意义。%
-接着阐述了作物模型的研究进展。%
+本章首先介绍了棉花在世界和中国经济发展中的重要地位。%
+然后阐述了棉花的地膜栽培技术在给我国农业发展带来的巨大经济效益的同时，也给我国带来了残膜污染的问题。%
+为了保护和改善农业生态环境，减少农用薄膜是切实可行的手段。%
+2017 年末，中国工程院喻树迅院士率领的科研育种团队成功培育出中棉 619，该品种适用于无膜种植。%
+随后详细论述了 Cotton2K 模型的发展历史和主要特色。
 最后介绍了本文的研究内容、技术路线以及论文结构。
