--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,8 +1,9 @@
-\chapter{结论与展望}
-本文对机理性很强的棉花生产模拟模型 Cotton2K 进行了详细阐述，%
-修改了 Cotton2K 模型的源码以修复一些问题并增加新的功能，%
-并以新疆阿拉尔市 2019年至 2020 年的“中棉 619”的田间试验为基础，通过 Sobol 方法对 Cotton2K 模型的品种参数进行全局敏感性分析，%
-并对敏感性指数较大的品种参数采用 NSGA-III 多目标优化算法进行优化，%
+\chapter{结论}
+本文详细描述了棉花生长模型 Cotton2K，%
+修改了模型的源码以修复一些问题，增加更为详细的冠层子模块，%
+以 2019 年至 2020 年的田间试验为基础，%
+先通过全局敏感性分析方法对模型的品种参数进行分析，%
+综合考量选取其中部分品种参数采用 NSGA-III 多目标优化算法进行优化，%
 对模拟结果与实测数据进行分析，进而评估了模型的修改对研究区域棉花的模拟精度的影响。%
 总的来说，在该模型对棉花生育早期特别是现蕾以前模拟的精度很高，随着器官的分化，棉花的生长发育机理变得越来越复杂，模拟的精度有所下降。%
 但对于这样一个复杂的过程，模型在经过冠层光能截获率的修改后所能达到的结果是可以接受的。%
@@ -16,10 +17,10 @@
 模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，这与实际测量结果相当。%
 这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
 
-\section{存在的问题与展望}
+\section{存在的问题与下一步工作}
 
 本文仍存在一些不足：
 \begin{enumerate*}
-    \item 在参数率定时考虑的生理指标过少
+    \item 未考虑无膜棉与有膜棉最大区别的土壤水分过程
     \item 未检验模型对除阿拉尔地区以外的其他地区的有效性
-\end{enumerate*}。下一步需要继续开展田间试验，增加新疆其他地区田间数据，并考虑多个生育指标对模型参数进行优化，从而进一步提高模型的模拟精度。
+\end{enumerate*}。下一步需要增加其他研究区域的田间数据，继续对模型进一步修改，使其可以更细致地模拟土壤水分运移过程。
