--- a/sa.tex
+++ b/sa.tex
@@ -9,15 +9,18 @@
     任何对 12 个农业生态系统指标中的任何一个具有一阶敏感性指数大于 0.05 的参数都被认为是有影响的参数，%
     并在随后的分析中保持灵活性 (表 \ref{tab:parameters})。%
     其他参数被认为是非影响性的，在剩余的分析中被固定为默认值。%
-    Sobol GSA的总体目的是在使用多目标优化进行模型校准之前消除非影响性参数。
+    Sobol GSA 的总体目的是在进行模型校准之前排除非影响性参数的影响，以降低问题复杂性，减少计算资源消耗。
     \section{参数选择及取值范围}
-    在原版 Cotton2K 模型中，所有参数都是以可更改的外部文件形式导入模型。%
-    对于 Cotton2K 模型中 50 个品种参数而言，并非所有的参数对于模型输出结果都具有影响，需要通过敏感性分析选取其中敏感性较大的参数进行下一步校正。%
+    本文通过修改 Cotton2K 增加了从数据库导入输入参数与数据的能力，大大提高了工作效率。%
+    对于一个复杂的作物生长机理模型，模型输出结果往往不是很大程度上是由一小部分敏感的参数决定的，%
+    如果运用多目标优化的方法对所有的模型参数进行优化，即浪费了大量的计算资源，也会导致参数空间维度过高而优化结果难以收敛，%
+    通过敏感性分析选取其中敏感性较大的参数进行下一步校正是应用广泛的一种方法。%
     本文根据公开的源码和相关参数对应公式，对品种参数取值范围进行了合理化的约束。%
-    在修改后的 Cotton2K 模型中品种参数文件以 \texttt{cultivar\_parameters} 字段保存，模型参数服从均匀分布。%
-    本文主要对 50 个原始品种参数和 20 个修改模型参数进行敏感性分析，原始模型参数的名称及取值范围如表 \ref{tab:saParameters} 所示。%
+    在修改后的 Cotton2K 模型中品种参数保存在 \texttt{cultivar\_parameters} 字段，默认模型参数服从均匀分布 (Uniform distribution)。%
+    Cotton2K 原版模型参数的名称及取值范围如表 \ref{tab:saParameters} 所示。%
     根据第 \ref{chap:modelModification} 章的内容，本文还对模型进行了修改，增加了更为详细的分层的冠层子模块，因为这个改动，改版的 Cotton2K 模型比原版的模型多了 20 个参数，%
-    为 LIPAR01 至 LIPAR20，取值范围根据 GOSSYM 模型和 WOFOST 模型中相关的参数范围扩大 100\% 而得。
+    为 LIPAR01 至 LIPAR20，分别代表从地表至冠层顶部每 5cm 高度的各层叶面积指数与光能截获率公式参数，%
+    取值范围根据 GOSSYM 模型和 WOFOST 模型中相关的参数范围扩大 100\% 而得，为 -1.6 至 0。
     \begin{table}
         \caption{原版 Cotton2K 参数列表及取值范围}\label{tab:saParameters}
         \small
@@ -55,7 +58,7 @@
     \end{table}
 
     \section{Cotton2K 模型的运行}
-    Cotton2K 模型需要输入的参数较多，模型结构较为复杂，在第 \ref{sec:io} 节中论述，本文对模型的输入输出格式进行了修改简化，提高了模型模拟效率。
+    Cotton2K 模型参数繁多，机制复杂，综合考虑了大气、土壤与植物的交互作用，在第 \ref{sec:io} 节中论述，本文对模型的输入输出格式进行了修改简化，提高了模型模拟效率。
 
     模型的需要如下的输入参数
     \begin{enumerate}
@@ -148,9 +151,8 @@
     这一点在随后的章节会详细讨论。
 
     \section{本章小结}
-    本章以 “中棉 619” 为研究对象，%
-    选择 Cotton2K 模型的 50 个品种参数和本文的改版模型中新增的 20 个参数，%
-    确定范围和分布形式，在 2020 年气象条件下驱动模型运行，并对不同输出变量进行 Sobol 全局敏感性分析。%
-    通过皮棉产量、棉花株高和光能截获率的敏感性指数大小，找出对各自影响较大的参数。%
-    本章敏感性分析结果为第 \ref{chap:moo} 章模型校正做准备。
+    本章对 Cotton2K 模型的 50 个参数和本文的改版模型中新增的 20 个参数进行全局敏感性分析，%
+    根据参数使用场景和现实意义确定参数的范围和分布形式，%
+    以 2020 年 W5 灌水处理的场景作为背景，运行模型进行分析。%
+    比较皮棉产量、棉花株高和光能截获率的敏感性指数，寻找可能导致敏感的原因。
 \end{spacing}
