--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,23 @@
 
+@article{abbas2020,
+  title = {Climate Change and Cotton Production: An Empirical Investigation of {{Pakistan}}},
+  shorttitle = {Climate Change and Cotton Production},
+  author = {Abbas, Shujaat},
+  date = {2020-08},
+  journaltitle = {Environmental Science and Pollution Research International},
+  shortjournal = {Environ Sci Pollut Res Int},
+  volume = {27},
+  number = {23},
+  eprint = {32445137},
+  eprinttype = {pmid},
+  pages = {29580--29588},
+  issn = {1614-7499},
+  doi = {10.1007/s11356-020-09222-0},
+  abstract = {This study investigates the relationship between climate change, the area under cultivation, fertilizer consumption, and cotton production in Pakistan from 1980 to 2018. The existence and nature of the short-term and long-term relationships are explored by using an autoregressive distributed lag (ARDL) model bounds testing approach. The estimated result of the ARDL bounds testing approach has shown the presence of cointegration between dependent and explanatory variables. The long-term estimates have revealed that the increasing average temperature has a positive insignificant effect, which implies that rising temperature is not increasing cotton yield in Pakistan. The findings of the area under cultivation and fertilizer consumption have revealed significant positive effects in both the long run and short run. This study urges Pakistan to reduce the pace of climate changes and increase water conservation by planting forests and constructing dams across major rivers along with the adoption of environmentally friendly production techniques and inputs.},
+  langid = {english},
+  keywords = {Agriculture productivity,ARDL model,Carbon Dioxide,Climate change,Climate Change,Economic Development,Pakistan,Temperature}
+}
+
 @incollection{abbasApplicationsCropModeling2020,
   title = {Applications of {{Crop Modeling}} in {{Cotton Production}}},
   booktitle = {Cotton {{Production}} and {{Uses}}: {{Agronomy}}, {{Crop Protection}}, and {{Postharvest Technologies}}},
@@ -907,7 +926,7 @@
   primaryclass = {cs, math, stat},
   url = {http://arxiv.org/abs/2008.08051},
   urldate = {2022-03-24},
-  abstract = {Quasi-Monte Carlo (QMC) points are a substitute for plain Monte Carlo (MC) points that greatly improve integration accuracy under mild assumptions on the problem. Because QMC can give errors that are \$o(1/n)\$ as \$n\textbackslash to\textbackslash infty\$, changing even one point can change the estimate by an amount much larger than the error would have been and worsen the convergence rate. As a result, certain practices that fit quite naturally and intuitively with MC points are very detrimental to QMC performance. These include thinning, burn-in, and taking sample sizes such as powers of \$10\$, other than the ones for which the QMC points were designed. This article looks at the effects of a common practice in which one skips the first point of a Sobol sequence. The retained points ordinarily fail to be a digital net and when scrambling is applied, skipping over the first point can increase the numerical error by a factor proportional to \$\textbackslash sqrt\{n\}\$ where \$n\$ is the number of function evaluations used.},
+  abstract = {Quasi-Monte Carlo (QMC) points are a substitute for plain Monte Carlo (MC) points that greatly improve integration accuracy under mild assumptions on the problem. Because QMC can give errors that are \$o(1/n)\$ as \$n\textbackslash to\textbackslash infty\$, changing even one point can change the estimate by an amount much larger than the error would have been and worsen the convergence rate. As a result, certain practices that fit quite naturally and intuitively with MC points are very detrimental to QMC performance. These include thinning, burn-in, and taking sample sizes such as powers of \$10\$, other than the ones for which the QMC points were designed. This article looks at the effects of a common practice in which one skips the first point of a Sobol' sequence. The retained points ordinarily fail to be a digital net and when scrambling is applied, skipping over the first point can increase the numerical error by a factor proportional to \$\textbackslash sqrt\{n\}\$ where \$n\$ is the number of function evaluations used.},
   archiveprefix = {arXiv},
   keywords = {Mathematics - Numerical Analysis,Statistics - Computation}
 }
