--- a/thesis.bib
+++ b/thesis.bib
@@ -1627,9 +1627,7 @@
   title = {{{Cotton2K模型敏感性参数分析与校正}}},
   author = {{朱航飞}},
   date = {2021-06},
-  institution = {{塔里木大学}},
-  editora = {{周保平}},
-  editoratype = {collaborator}
+  institution = {{塔里木大学}}
 }
 
 @article{zurweller2019,
