FIX: unit for formula

--- a/method.tex
+++ b/method.tex
@@ -68,7 +68,7 @@ $N$-$P_2O_5$-$K_2O$ 按照 250-100-50 $\mathrm{kg/hm^2}$ 的量进行施肥。
     LI_{i} = 1 - \frac{\sum^5_{j=1} I_{i,j}}{\sum^5_{j=1} I_{i+1,j}} \quad \mathrm{for} i \in {1,2,\dots,6}
 \end{equation}
 
-式中， $LI_{i}$ 为第 $i$ 层的光能截获率， $I_{i,j}$ 是第 $i$ 层第 $j$ 列网格的光照强度， $I_{i+1,j}$ 为上层网格的光照强度。
+式中， $LI_{i}$ 为第 $i$ 层的光能截获率， $I_{i,j}$ 是第 $i$ 层第 $j$ 列网格的光照强度 ($W\ m^{-2}$)， $I_{i+1,j}$ 为上层网格的光照强度 ($W\ m^{-2}$)。
 
 \subsection{土壤参数}
 每周取样测定一次土壤容积含水量（4 $\times$ 3 网格），另外，使用矫正后的土壤水分和温度自动记录仪 (HOBO H21-002, United States) 分 5 层实时监测 0-100cm 深度的土壤水分含量；
